--- a/styles.css
+++ b/styles.css
@@ -106,7 +106,7 @@ button:hover {
 
   /* Efeito hover */
   &::-webkit-scrollbar-thumb:hover {
-    background: #555;
+    background: #fbbf24;
   }
 }
 
